tests/paczka2/big_fuzzy/94808230.err
Error in line 2: 2fKR A370 56,3
Error in line 1: S510 A836 32,1
Error in line 6: rZ2fJC66MsQ S510 53,1
Error in line 14: 2fKR S510 70,7
Error in line 17: 2fKR S723 28,3
Error in line 34: rZ2fJC66MsQ S723 19,7
Error in line 24: qLAvk S510 46,5
Error in line 46: 2fKR A370 32,9
Error in line 77: rZ2fJC66MsQ A370 77,85
Error in line 65: hjzrP2 S510 19,8
Error in line 72: sEkMzVgxQQ S510 92,6
Error in line 75: f5XztY3SNvo A370 201,5
Error in line 88: qLAvk S510 16,3
Error in line 87: hjzrP2 S723 94,6
Error in line 81: rZ2fJC66MsQ A370 79,0
Error in line 97: rZ2fJC66MsQ A836 -4,4
Error in line 85: f5XztY3SNvo A836 34,8
Error in line 98: f5XztY3SNvo A370 90,4
Error in line 102: 2fKR S723 855,6
Error in line 110: rZ2fJC66MsQ A836 209,6
Error in line 122: hjzrP2 S510 58,4
Error in line 120: S510 S723 81,8
Error in line 125: hjzrP2 A836 7,9
Error in line 133: f5XztY3SNvo S723 391,8
Error in line 141: S510 A836 43,5
Error in line 148: rZ2fJC66MsQ A370 0,5
Error in line 144: qLAvk S723 4,0
Error in line 149: rZ2fJC66MsQ S510 59,5
Error in line 150: qLAvk A370 23,8
Error in line 155: f5XztY3SNvo S510 -1,27
Error in line 157: hjzrP2 A836 20,3
Error in line 143: f5XztY3SNvo S510 33,0
Error in line 171: S510 A370 0,8
Error in line 183: 2fKR A836 63,17
Error in line 178: f5XztY3SNvo A370 55,9
Error in line 194: 2fKR S723 46,0
Error in line 191: f5XztY3SNvo S510 89,9
Error in line 202: sEkMzVgxQQ S723 60,90
Error in line 199: f5XztY3SNvo A836 68,6
Error in line 203: sEkMzVgxQQ S723 210,0
Error in line 210: sEkMzVgxQQ A836 27,53
Error in line 200: hjzrP2 S723 36,2
Error in line 209: sEkMzVgxQQ A836 9,3
Error in line 218: f5XztY3SNvo S510 23,7
Error in line 193: S510 A836 187,3
Error in line 237: rZ2fJC66MsQ A836 24#,1
Error in line 231: rZ2fJC66MsQ A836 58,0
Error in line 242: rZ2fJC66MsQ S510 65,85
Error in line 243: S510 A370 136,2
Error in line 244: S510 A836 42,5
